fix: disable overflow y

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,8 +22,10 @@
 
 html,
 body {
-  /* overflow-y: hidden; */
+  overflow: hidden;
   height: 100%;
+  position: fixed;
+  width: 100%;
 }
 
 #about {
